@startuml
'https://plantuml.com/class-diagram

class Lexer{

}

class Parser{

}

class Interprete{

}

class Runner{

}

Runner --> Lexer
Runner --> Interprete
Runner --> Parser

class Token{
    - start : List
    - end : List
    - type : TokenType
    - value : String
}

class AST{
    - node :
}

@enduml